# wgsl-includes

./: Cargo.toml  LICENSE  readme.MD
src/: lib.rs
tests/: shader_resolve.wgsl  tests.rs
tests/shaders/: shader.wgsl  shader_resolve.wgsl
tests/shaders/shared/: consts.wgsl
