[package]
name = "wgsl-includes"
authors = ["Jason de Wolff <jason.dewolff@temporalinteractive.com>"]
description = "A tiny crate meant to solve two major pain points with naga & wgsl: no validation at compile time and no support for shader includes."
edition = "2021"
homepage = "https://github.com/TemporalInteractive/wgsl-includes"
keywords = ["wgsl", "naga", "shaders"]
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/TemporalInteractive/wgsl-includes"
version = "0.0.2"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.101"
naga = { version = "25.0.1", features = ["wgsl-in"] }